src/test/deca/context/invalid/declaVariable-incompatibleType.context
declaVariable-incompatibleType.deca:11:
